2009-09-02  Sancho Lerena <slerena@artica.es> 

	*  lib/PandoraFMS/PluginServer.pm, util/pandora_exec: Nagis plugin 
	support implemented and working.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed the matches_value alert option (was not
	  working properly).

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Core.pm: Removed the inhibit_alerts configuration
	  token. Alert inhibition is configured on a per-agent basis.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Added sample configurations for
	  inhibit_alerts and use_xml_timestamp.

	* lib/PandoraFMS/Config.pm: Added the inhibit_alerts configuration
	  token.

	* lib/PandoraFMS/Core.pm: Added the option to inhibit agent alerts if
	  the parent has fired a critical alert.

	* lib/PandoraFMS/DataServer.pm: Use the XML file last modification time 
	  if no timestamp is specified.

2009-09-01 Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Using chkconfig for service install. Using the new
	logrotate config for automatic logfile management. 

	* pandora_server_installer: Using new logrotate config file.
	
	* bin/pandora_server: Enterprise load notice are shown after main banner.
	
	* lib/PandoraFMS/Config.pm: Updated version (again).
	
	* util/pandora_logrotate: New conf file for /etc/logrotate.d/
	
2009-08-28  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec,
	  pandora_server_installer: Autocreate the conf and md5 subdirectories.

2009-08-27  Ramon Novoa  <rnovoa@artica.es>

	* util/tentacle_serverd: Remote config .conf and
	  .md5 files are now stored in different subdirectories.

	* bin/tentacle_server: Updated to latest version.

2009-08-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed compound alerts.

2009-08-24 Sancho Lerena <slerena@artica.es>

        * lib/PandoraFMS/Core.pm: Condition trigger for WARNING and